Fix text align

--- a/source/Popup/styles.scss
+++ b/source/Popup/styles.scss
@@ -40,13 +40,15 @@ section{
       font-family: "Lucida Grande", Tahoma, sans-serif;
       font-size: 1.2em;
       color: #666;
-      display: block;
+      display: flex;
+      justify-content: left;
+      align-items: center;
+      text-align: justify;
       white-space: nowrap;
       padding: 2px 10px;
       /*border-top: 1px solid #e0efef;*/
       cursor: pointer;
       // -webkit-transition: background 0.1s ease-out;
-      text-align: justify;
 
       &:first-child {
         border-top-color: transparent;
